lsp/tree-sitter/test/corpus/kitchen_sink.txt
================================================================================
Import declarations — named destructure, bare identifier, type-only
================================================================================

{ readFile , writeFile } from 'fs/promises'
type { Config } from './types.civet'

--------------------------------------------------------------------------------

(program
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (keyword)
  (string)
  (type_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (keyword)
  (string))

================================================================================
Variable declarations — walrus := and mutable .=
================================================================================

MAX_RETRIES := 3
timeout .= 5000
label := 'loading'

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (string))

================================================================================
Implicit function application — nested and multi-arg
================================================================================

console . log 'hello'
readFile path , 'utf8'
double square x

--------------------------------------------------------------------------------

(program
  (identifier)
  (punctuation)
  (identifier)
  (string)
  (identifier)
  (identifier)
  (punctuation)
  (string)
  (identifier)
  (identifier)
  (identifier))

================================================================================
Function declaration with type annotations — name, params, return type
================================================================================

function greet ( name : string ) : string
  'Hello ' + name

async function load ( path : string ) : Promise
  await readFile path , 'utf8'

--------------------------------------------------------------------------------

(program
  (function_declaration
    (identifier))
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (string)
  (operator)
  (identifier)
  (keyword)
  (function_declaration
    (identifier))
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (keyword)
  (identifier)
  (identifier)
  (punctuation)
  (string))

================================================================================
Arrow functions — fat arrow and thin arrow
================================================================================

double := ( x : number ) => x * 2
greet := ( name : string ) -> `Hello ${ name } !`
identity := ( x ) => x

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (template_string
    (template_chars)
    (template_substitution
      (identifier))
    (template_chars))
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (identifier))

================================================================================
Class declaration — constructor, private field, method
================================================================================

class FileCache
  #data : Map

  @( )
    @#data = new Map

  get ( key : string )
    @#data . get key

--------------------------------------------------------------------------------

(program
  (class_declaration
    (identifier))
  (private_identifier)
  (operator)
  (identifier)
  (at_expression)
  (punctuation)
  (punctuation)
  (at_expression)
  (private_identifier)
  (operator)
  (keyword)
  (identifier)
  (identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (at_expression)
  (private_identifier)
  (punctuation)
  (identifier)
  (identifier))

================================================================================
Pipe operator with trailing member access
================================================================================

result := input
  |> . trim ( )
  |> . toLowerCase ( )
  |> encodeURIComponent

words := text |> . split ' ' |> . length

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (operator)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (operator)
  (identifier)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (string)
  (operator)
  (punctuation)
  (identifier))

================================================================================
Implicit object — indented key-value pairs
================================================================================

config :=
  host : 'localhost'
  port : 8080
  debug : true

options :=
  timeout : MAX_RETRIES * 1000
  retry : true

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (identifier)
  (operator)
  (string)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (constant)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (constant))

================================================================================
Destructuring assignment with defaults and rest
================================================================================

{ host , port = 8080 , ... rest } := config
[ first , ... tail ] := items

--------------------------------------------------------------------------------

(program
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (operator)
  (number)
  (punctuation)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier))

================================================================================
Unless and until — real Civet control flow
================================================================================

return unless input ?
throw new Error 'empty' unless data ?
n ++ until n > limit
process results unless results . length is 0

--------------------------------------------------------------------------------

(program
  (keyword)
  (keyword)
  (identifier)
  (operator)
  (keyword)
  (keyword)
  (identifier)
  (string)
  (keyword)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (keyword)
  (identifier)
  (operator)
  (identifier)
  (identifier)
  (identifier)
  (keyword)
  (identifier)
  (punctuation)
  (identifier)
  (keyword)
  (number))

================================================================================
Civet instanceof operator <?
================================================================================

if value <? Error
  throw value

node <? 'string' ? node : ''

--------------------------------------------------------------------------------

(program
  (keyword)
  (identifier)
  (operator)
  (identifier)
  (keyword)
  (identifier)
  (identifier)
  (operator)
  (string)
  (operator)
  (identifier)
  (operator)
  (string))

================================================================================
Async / await with try-catch-finally
================================================================================

async function fetch ( url : string )
  try
    res := await get url
    await res . json ( )
  catch err
    console . error err
  finally
    cleanup ( )

--------------------------------------------------------------------------------

(program
  (keyword)
  (function_declaration
    (identifier))
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (keyword)
  (identifier)
  (operator)
  (keyword)
  (identifier)
  (identifier)
  (keyword)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (keyword)
  (identifier)
  (identifier)
  (punctuation)
  (identifier)
  (identifier)
  (keyword)
  (identifier)
  (punctuation)
  (punctuation))

================================================================================
For-of loop with guard and push
================================================================================

results : string [ ] := [ ]
for entry of entries
  continue unless entry . startsWith '.'
  results . push entry

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (punctuation)
  (operator)
  (punctuation)
  (punctuation)
  (keyword)
  (identifier)
  (keyword)
  (identifier)
  (keyword)
  (keyword)
  (identifier)
  (punctuation)
  (identifier)
  (string)
  (identifier)
  (punctuation)
  (identifier)
  (identifier))

================================================================================
Template literals — tagged, nested call, error message
================================================================================

msg := `Hello ${ name } !`
err := `Error in ${ fn ( ) } : ${ code }`
tagged := html `<div>${ content }</div>`

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (template_string
    (template_chars)
    (template_substitution
      (identifier))
    (template_chars))
  (identifier)
  (operator)
  (template_string
    (template_chars)
    (template_substitution
      (identifier)
      (punctuation)
      (punctuation))
    (template_chars)
    (template_substitution
      (identifier)))
  (identifier)
  (operator)
  (identifier)
  (template_string
    (template_chars)
    (template_substitution
      (identifier))
    (template_chars)))

================================================================================
Trailing member expressions — property on call result
================================================================================

getUser ( ) . name
arr . filter ( ( x ) => x > 0 ) . length
( await fetch url ) . status

--------------------------------------------------------------------------------

(program
  (identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (identifier)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (operator)
  (number)
  (punctuation)
  (punctuation)
  (identifier)
  (punctuation)
  (keyword)
  (identifier)
  (identifier)
  (punctuation)
  (punctuation)
  (identifier))

================================================================================
@ this-shorthand — constructor args, property, method chain
================================================================================

@( @name : string , @logger : Logger )
  @cache = new Map
  @logger . log `Created ${ @name }`

--------------------------------------------------------------------------------

(program
  (at_expression)
  (punctuation)
  (at_expression
    (identifier))
  (operator)
  (identifier)
  (punctuation)
  (at_expression
    (identifier))
  (operator)
  (identifier)
  (punctuation)
  (at_expression
    (identifier))
  (operator)
  (keyword)
  (identifier)
  (at_expression
    (identifier))
  (punctuation)
  (identifier)
  (template_string
    (template_chars)
    (template_substitution
      (at_expression
        (identifier)))))
