lsp/tree-sitter/test/corpus/tokens.txt
================================================================================
Line comment
================================================================================

// this is a comment

--------------------------------------------------------------------------------

(program
  (line_comment))

================================================================================
Block comment
================================================================================

/* multi
   line */

--------------------------------------------------------------------------------

(program
  (block_comment))

================================================================================
Hash comment
================================================================================

### block comment ###

--------------------------------------------------------------------------------

(program
  (hash_comment))

================================================================================
Single-quoted string
================================================================================

'hello world'

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
Double-quoted string with escape
================================================================================

"hello\nworld"

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
Triple double-quoted block string
================================================================================

"""
hello
world
"""

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
Triple single-quoted block string
================================================================================

'''
hello
world
'''

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
Triple-quoted block with inner single and double quotes
================================================================================

"""say "hi" and 'bye' here"""

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
Triple double-quoted block with paired inner double quotes
================================================================================

"""she said ""yeah"" then bye"""

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
Triple single-quoted block with paired inner single quotes
================================================================================

'''she said ''yeah'' then bye'''

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
Code after triple-quoted block parses correctly
================================================================================

x := """
multi
line
"""
y := 1

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (string)
  (identifier)
  (operator)
  (number))

================================================================================
Template string
================================================================================

`hello world`

--------------------------------------------------------------------------------

(program
  (template_string
    (template_chars)))

================================================================================
Template string with substitution
================================================================================

`hello ${name}!`

--------------------------------------------------------------------------------

(program
  (template_string
    (template_chars)
    (template_substitution
      (identifier))
    (template_chars)))

================================================================================
Triple-backtick template string
================================================================================

```
multi
line
template
```

--------------------------------------------------------------------------------

(program
  (template_string
    (template_chars)))

================================================================================
Triple-backtick template with substitution
================================================================================

```a${name}b```

--------------------------------------------------------------------------------

(program
  (template_string
    (template_chars)
    (template_substitution
      (identifier))
    (template_chars)))

================================================================================
Triple-backtick template with inner single backticks
================================================================================

```code: `x` here```

--------------------------------------------------------------------------------

(program
  (template_string
    (template_chars)
    (template_chars)
    (template_chars)))

================================================================================
Code after triple-backtick template parses correctly
================================================================================

x := ```
hi
```
y := 1

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (template_string
    (template_chars))
  (identifier)
  (operator)
  (number))

================================================================================
Number — integer
================================================================================

42

--------------------------------------------------------------------------------

(program
  (number))

================================================================================
Number — float
================================================================================

3.14

--------------------------------------------------------------------------------

(program
  (number))

================================================================================
Number — hex
================================================================================

0xFF

--------------------------------------------------------------------------------

(program
  (number))

================================================================================
Number — binary
================================================================================

0b1010

--------------------------------------------------------------------------------

(program
  (number))

================================================================================
Number — bigint
================================================================================

100n

--------------------------------------------------------------------------------

(program
  (number))

================================================================================
Division — not confused with regex
================================================================================

a / b / c

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (identifier)
  (operator)
  (identifier))

================================================================================
Regex — simple
================================================================================

/foo/

--------------------------------------------------------------------------------

(program
  (regex))

================================================================================
Regex — with flags
================================================================================

/pattern/gi

--------------------------------------------------------------------------------

(program
  (regex))

================================================================================
Regex — with character class and escapes
================================================================================

/[a-z]\d+/

--------------------------------------------------------------------------------

(program
  (regex))

================================================================================
Regex — with slash in character class
================================================================================

/[^/]+/g

--------------------------------------------------------------------------------

(program
  (regex))

================================================================================
Regex — with named groups
================================================================================

/(?<year>\d{4})-(?<month>\d{2})/

--------------------------------------------------------------------------------

(program
  (regex))

================================================================================
Regex — with many flags
================================================================================

/pattern/gimsuy

--------------------------------------------------------------------------------

(program
  (regex))

================================================================================
Identifier
================================================================================

foo

--------------------------------------------------------------------------------

(program
  (identifier))

================================================================================
Private identifier
================================================================================

#count

--------------------------------------------------------------------------------

(program
  (private_identifier))

================================================================================
at_expression — standalone
================================================================================

@

--------------------------------------------------------------------------------

(program
  (at_expression))

================================================================================
at_expression — with property
================================================================================

@name

--------------------------------------------------------------------------------

(program
  (at_expression
    (identifier)))

================================================================================
Decorator
================================================================================

@@injectable

--------------------------------------------------------------------------------

(program
  (decorator
    (identifier)))

================================================================================
Pipe operator
================================================================================

x |> f

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (identifier))

================================================================================
Range operators
================================================================================

1..10

--------------------------------------------------------------------------------

(program
  (number)
  (operator)
  (number))

================================================================================
Exclusive range
================================================================================

0...5

--------------------------------------------------------------------------------

(program
  (number)
  (operator)
  (number))

================================================================================
Thin arrow
================================================================================

(x) -> x

--------------------------------------------------------------------------------

(program
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (identifier))

================================================================================
Civet assignment
================================================================================

x := 1

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (number))

================================================================================
Backward Civet assignments
================================================================================

value =: constant
value =. mutable
value ≕ immutable

--------------------------------------------------------------------------------

(program
  (identifier)
  (operator)
  (identifier)
  (identifier)
  (operator)
  (identifier)
  (identifier)
  (operator)
  (identifier))

================================================================================
unless keyword
================================================================================

unless (x)

--------------------------------------------------------------------------------

(program
  (keyword)
  (punctuation)
  (identifier)
  (punctuation))

================================================================================
until keyword
================================================================================

until (done)

--------------------------------------------------------------------------------

(program
  (keyword)
  (punctuation)
  (identifier)
  (punctuation))

================================================================================
Type keyword
================================================================================

type Foo = string

--------------------------------------------------------------------------------

(program
  (type_keyword)
  (identifier)
  (operator)
  (identifier))

================================================================================
Constants
================================================================================

true

--------------------------------------------------------------------------------

(program
  (constant))

================================================================================
Sample Civet file
================================================================================

###
  Civet sample — exercises key syntax for parser testing
###

// Standard imports
import { readFile } from 'fs/promises'
import type { PathLike } from 'fs'

// Simple constants
PI := 3.14159
MAX_RETRIES := 5
DEBUG := false

// Type alias
type Callback<T> = (err: Error | null, result: T) => void
type FilePath = string | PathLike

// Interface
interface Config
  host: string
  port: number
  debug?: boolean

// Class with decorator and @ shorthand
@@injectable
class HttpClient
  #baseUrl: string

  constructor(@baseUrl: string, private config: Config) {}

  get url(): string
    @baseUrl

  async fetch<T>(path: string): Promise<T>
    url := `${@baseUrl}/${path}`
    response := await globalThis.fetch(url)
    unless (response.ok)
      throw new Error(`HTTP ${response.status}`)
    response.json() as T

// Pipe operator
double := (x: number) -> x * 2
square := (x: number) -> x ** 2

transform := (values: number[]) ->
  values
    |> .filter((x) -> x > 0)
    |> .map(double)
    |> .map(square)

// Range expressions
range := [1..10]
exclusiveRange := [0...5]

// unless / until
count .= 0
until (count >= MAX_RETRIES)
  count++

validate := (x: number) ->
  unless (x > 0)
    throw new Error('Expected positive number')
  x

// Template literals
greet := (name: string) ->
  `Hello, ${name}! PI ≈ ${PI.toFixed(2)}.`

// Destructuring
{ host, port = 8080 } := config
[first, ...rest] := [1, 2, 3, 4, 5]

// Private class fields
class Counter
  #count = 0

  increment(): void
    @#count++

  get value(): number
    @#count

export { HttpClient, Counter, transform }

--------------------------------------------------------------------------------

(program
  (hash_comment)
  (line_comment)
  (keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (keyword)
  (string)
  (keyword)
  (type_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (keyword)
  (string)
  (line_comment)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (constant)
  (line_comment)
  (type_keyword)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (constant)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (keyword)
  (type_keyword)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (identifier)
  (line_comment)
  (keyword)
  (identifier)
  (identifier)
  (operator)
  (identifier)
  (identifier)
  (operator)
  (identifier)
  (identifier)
  (operator)
  (operator)
  (identifier)
  (line_comment)
  (decorator
    (identifier))
  (class_declaration
    (identifier))
  (private_identifier)
  (operator)
  (identifier)
  (identifier)
  (punctuation)
  (at_expression
    (identifier))
  (operator)
  (identifier)
  (punctuation)
  (keyword)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (identifier)
  (identifier)
  (punctuation)
  (punctuation)
  (operator)
  (identifier)
  (at_expression
    (identifier))
  (keyword)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (template_string
    (template_substitution
      (at_expression
        (identifier)))
    (template_chars)
    (template_substitution
      (identifier)))
  (identifier)
  (operator)
  (keyword)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (keyword)
  (keyword)
  (identifier)
  (punctuation)
  (template_string
    (template_chars)
    (template_substitution
      (identifier)
      (punctuation)
      (identifier)))
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (keyword)
  (identifier)
  (line_comment)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (operator)
  (number)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (operator)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (punctuation)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (operator)
  (number)
  (punctuation)
  (operator)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (line_comment)
  (identifier)
  (operator)
  (punctuation)
  (number)
  (operator)
  (number)
  (punctuation)
  (identifier)
  (operator)
  (punctuation)
  (number)
  (operator)
  (number)
  (punctuation)
  (line_comment)
  (identifier)
  (operator)
  (number)
  (keyword)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (keyword)
  (punctuation)
  (identifier)
  (operator)
  (number)
  (punctuation)
  (keyword)
  (keyword)
  (identifier)
  (punctuation)
  (string)
  (punctuation)
  (identifier)
  (line_comment)
  (identifier)
  (operator)
  (punctuation)
  (identifier)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (template_string
    (template_chars)
    (template_substitution
      (identifier))
    (template_chars)
    (template_substitution
      (identifier)
      (punctuation)
      (identifier)
      (punctuation)
      (number)
      (punctuation))
    (template_chars))
  (line_comment)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (operator)
  (number)
  (punctuation)
  (operator)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (identifier)
  (punctuation)
  (operator)
  (punctuation)
  (number)
  (punctuation)
  (number)
  (punctuation)
  (number)
  (punctuation)
  (number)
  (punctuation)
  (number)
  (punctuation)
  (line_comment)
  (class_declaration
    (identifier))
  (private_identifier)
  (operator)
  (number)
  (identifier)
  (punctuation)
  (punctuation)
  (operator)
  (keyword)
  (at_expression)
  (private_identifier)
  (operator)
  (identifier)
  (identifier)
  (punctuation)
  (punctuation)
  (operator)
  (identifier)
  (at_expression)
  (private_identifier)
  (keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation)
  (identifier)
  (punctuation))
